<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/card_background"
    android:layout_height="wrap_content">

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/view_line_size"
        android:id="@+id/view2" app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:background="@color/view_line_color"/>
    <TextView
        android:text="@string/Rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recptno" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="24dp"
        android:textStyle="bold"
        android:background="@drawable/chitvalue_box"
        android:elevation="1sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintBottom_toBottomOf="@+id/view2" android:padding="@dimen/sp4_space"
        android:textSize="@dimen/sp14_space"

        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:text="@string/Rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_rc_date" app:layout_constraintStart_toEndOf="@id/recptno"
        android:layout_marginLeft="24dp"
        android:textStyle="bold"
        android:background="@drawable/chitvalue_box"
        android:elevation="1sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintBottom_toBottomOf="@+id/view2" android:padding="@dimen/sp4_space"
        android:textSize="@dimen/sp14_space"

        android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
        android:id="@+id/firstlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/recptno" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receivedamnt"
                android:textColor="@color/grey_600"/>

            <TextView
                android:id="@+id/txt_rc_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_700"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paytype"
                android:textColor="@color/grey_600"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_700"
                android:textStyle="bold" android:id="@+id/txt_rc_paytype"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red_400"
                android:textStyle="bold" android:id="@+id/txt_stattus"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:visibility="gone"
                android:textColor="@color/grey_600"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:textStyle="bold" android:id="@+id/txt_dueadvance" android:gravity="right"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_line_size"
        android:id="@+id/view4"
        android:layout_marginTop="@dimen/sp16_space"
        app:layout_constraintTop_toBottomOf="@+id/secondlayout"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/view_line_color"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>