<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginRight="32dp" android:layout_marginEnd="32dp" android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp" android:id="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_person_outline"
            android:id="@+id/imageView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="0sp"
            android:id="@+id/view3"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imageView3" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edt_userid"
            app:layout_constraintStart_toEndOf="@+id/view3" android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toTopOf="@+id/view3"
            app:layout_constraintBottom_toBottomOf="@+id/view3" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:background="@drawable/edittext_nullbackground" android:textColor="@color/white"
            android:textColorHint="@color/white" android:hint="@string/user_mobile"
            android:textSize="14dp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:id="@+id/view5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:background="@color/white" app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/pb_login" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginRight="32dp" android:layout_marginEnd="32dp" android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        android:layout_marginTop="16dp" android:id="@+id/passwordlay">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_lock_outline"
            android:id="@+id/imageView23" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="0sp"
            android:id="@+id/view23"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imageView23" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/imageView23"
            app:layout_constraintBottom_toBottomOf="@+id/imageView23"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edt_password"
            app:layout_constraintStart_toEndOf="@+id/view23" android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toTopOf="@+id/view23"
            app:layout_constraintBottom_toBottomOf="@+id/view23" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:background="@drawable/edittext_nullbackground" android:textColor="@color/white"
            android:textColorHint="@color/white" android:hint="@string/password"
            android:textSize="14dp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:id="@+id/view25" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:background="@color/white" app:layout_constraintTop_toBottomOf="@+id/imageView23"
            android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/pb_login" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_pass"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordlay"
        app:layout_constraintTop_toBottomOf="@+id/passwordlay" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <Button
        android:text="@string/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ma_login"
        app:layout_constraintStart_toStartOf="@+id/passwordlay"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgetpassword"
        app:layout_constraintEnd_toEndOf="@+id/passwordlay"
        android:layout_marginTop="24dp" android:textAllCaps="false"
        android:background="@drawable/button_background"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fingerprint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_ma_login"
        app:layout_constraintStart_toStartOf="@+id/btn_ma_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_ma_login"
        app:layout_constraintVertical_bias="0.100000024">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Or"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/logwithtouchid"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btn_ma_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="4dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>