<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background">
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/pb_signup" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/pb_signup" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline_signup"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/changepasslayout"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline_signup" android:padding="4dp">

        <EditText
            android:id="@+id/edt_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edittext_nullbackground"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirmpass"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_newpassword" />

        <TextView
            android:id="@+id/resendotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="Resend OTP"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_cp_submit" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edt_cp_custid"
            android:gravity="center"
            android:visibility="gone"
            android:background="@drawable/edittext_nullbackground" android:textColor="@color/white"
            android:textColorHint="@color/white" android:hint="@string/user_mobile"
            android:padding="8dp"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edt_newpassword"
            android:gravity="center"
            android:background="@drawable/edittext_nullbackground" android:textColor="@color/white"
            android:textColorHint="@color/white" android:hint="@string/newpass"
            android:padding="8dp"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_cp_custid" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp"/>

        <View
            android:layout_width="0sp"
            android:layout_height="1dp"
            android:id="@+id/view6"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/edt_confirmpassword"
            app:layout_constraintEnd_toEndOf="@+id/edt_confirmpassword" app:layout_constraintStart_toStartOf="@id/edt_confirmpassword"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
        <View
            android:layout_width="0sp"
            android:layout_height="1dp"
            android:id="@+id/view5"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/edt_newpassword"
            app:layout_constraintEnd_toEndOf="@+id/edt_newpassword" app:layout_constraintStart_toStartOf="@id/edt_newpassword"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
        <Button
            android:text="@string/changepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cp_submit"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@+id/view6"
            app:layout_constraintStart_toStartOf="@+id/view6" android:layout_marginEnd="8dp"
            android:textSize="@dimen/sp16_space"
            app:layout_constraintEnd_toEndOf="@+id/view6" android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.50"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:text="@string/changepass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="8dp"
        android:textColor="@color/white" android:textSize="18sp" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_signup"
        app:layout_constraintEnd_toEndOf="@+id/imageView" app:layout_constraintStart_toStartOf="@+id/imageView"/>

</androidx.constraintlayout.widget.ConstraintLayout>